--- a/src/Styles/results.css
+++ b/src/Styles/results.css
@@ -10,14 +10,16 @@ body {
   width: 95%;
   margin: 40px auto;
   padding: 40px;
-  background-color: #f4f6f9;
+  transition: all 0.3s ease;
+  background-color: var(--question-wrapper-background);
   border-radius: 10px;
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.15);
 }
 
 .results-container h1 {
   text-align: center;
-  color: black;
+  transition: all 0.3s ease;
+  color: var(--question-wrapper-header-text);
   padding: 20px;
   font-size: 2.5rem;
   font-weight: 600;
@@ -33,19 +35,22 @@ body {
 }
 
 .career-section h2 {
-  color: #333;
+  transition: all 0.3s ease;
+  color: var(--question-wrapper-header-text);
   font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 10px;
 }
 
 .career-section span {
-  color: #000;
+  transition: all 0.3s ease;
+  color: var(--question-wrapper-text);
 }
 
 .career-section p,
 .career-detail p {
-  color: #000;
+  transition: all 0.3s ease;
+  color: var(--question-wrapper-text);
   font-size: 1.1rem;
 }
 
@@ -54,7 +59,8 @@ body {
 }
 
 .detailed-graphs-section h3 {
-  color: #000;
+  transition: all 0.3s ease;
+  color: var(--question-wrapper-text);
   font-size: 1.4rem;
   font-weight: 600;
   margin-bottom: 15px;
